# trusty-mpm

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  release.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
.trusty-mpm/: INSTRUCTIONS.md
crates/trusty-mpm-cli/: Cargo.toml
crates/trusty-mpm-cli/src/: main.rs
crates/trusty-mpm-client/: Cargo.toml
crates/trusty-mpm-client/src/: client.rs  command.rs  executor.rs  lib.rs  result.rs
crates/trusty-mpm-core/: Cargo.toml
crates/trusty-mpm-core/assets/agents/: example-agent.md
crates/trusty-mpm-core/assets/instructions/: BASE_PM.md  TRUSTY_TOOL_PRIORITY.md
crates/trusty-mpm-core/assets/output-styles/: trusty-mpm.md
crates/trusty-mpm-core/src/: bundle.rs  claude_config.rs  compress.rs  connect.rs  delegation_authority.rs  discovery.rs  external_session.rs  instruction_pipeline.rs  lib.rs  names.rs  overseer_config.rs  paths.rs  project.rs  project_discovery.rs  session.rs  session_launch.rs  session_store.rs  tmux.rs
crates/trusty-mpm-daemon/: Cargo.toml
crates/trusty-mpm-daemon/src/: api.rs  api_tests.rs  claude_config.rs  discover.rs  discovery.rs  error.rs  lib.rs  llm_overseer.rs  lock.rs  main.rs  mcp_backend.rs  openapi.rs  optimizer.rs  state.rs  tmux.rs  watcher.rs
crates/trusty-mpm-daemon/src/api/: claude_config_routes.rs  types.rs
crates/trusty-mpm-daemon/src/services/: hook_service.rs  pairing_service.rs  session_service.rs  tmux_service.rs
crates/trusty-mpm-daemon/tests/: test_session_lifecycle.rs
crates/trusty-mpm-daemon/tests/e2e/: test_agent_deploy.rs  test_events.rs  test_overseer.rs  test_sessions.rs
crates/trusty-mpm-gui/: Cargo.toml
crates/trusty-mpm-gui/src/: commands.rs  lib.rs
crates/trusty-mpm-gui/ui/src/components/: Dashboard.svelte  Header.svelte  SessionList.svelte
crates/trusty-mpm-gui/ui/src/lib/: transport.ts
crates/trusty-mpm-gui/ui/src/stores/: app.ts
crates/trusty-mpm-mcp/: Cargo.toml
crates/trusty-mpm-telegram/: Cargo.toml
crates/trusty-mpm-telegram/src/: alerts.rs  commands.rs  formatter.rs  lib.rs  main.rs
crates/trusty-mpm-tui/: Cargo.toml
crates/trusty-mpm-tui/src/: client.rs  dashboard.rs  lib.rs  main.rs
docs/architecture/: agent-inheritance.md  delegation-authority.md  instruction-pipeline.md  overseer.md
docs/research/: architecture-overview.md  artifact-compatibility.md  dashboard-telegram.md  mcp-service.md  session-control-models.md  trusty-integration.md
docs/user-guide/: core-concepts.md  oversight.md
