[workspace]
members = [
    "crates/trusty-mpm-core",
    "crates/trusty-mpm-daemon",
    "crates/trusty-mpm-cli",
    "crates/trusty-mpm-tui",
    "crates/trusty-mpm-telegram",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/bobmatnyc/trusty-mpm"
homepage = "https://github.com/bobmatnyc/trusty-mpm"
authors = ["Bob Matsuoka"]

[workspace.dependencies]
# Internal crates
trusty-mpm-core = { path = "crates/trusty-mpm-core", version = "0.1.0" }

# Async runtime / HTTP
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
async-trait = "0.1"
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Telegram
teloxide = { version = "0.13", features = ["macros"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
parking_lot = "0.12"
dirs = "5"
walkdir = "2"
regex = "1"
gray_matter = "0.2"

# Testing
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
