[workspace]
members = [
    "crates/trusty-mpm-core",
    "crates/trusty-mpm-mcp",
    "crates/trusty-mpm-daemon",
    "crates/trusty-mpm-client",
    "crates/trusty-mpm-cli",
    "crates/trusty-mpm-tui",
    "crates/trusty-mpm-telegram",
    "crates/trusty-mpm-gui",
]
resolver = "2"

[workspace.package]
version = "0.2.9"
edition = "2024"
# MSRV: the codebase uses let-chains (`if let ... && ...`), stabilized in 1.88.
rust-version = "1.88"
license = "Elastic-2.0"
repository = "https://github.com/bobmatnyc/trusty-mpm"
homepage = "https://github.com/bobmatnyc/trusty-mpm"
authors = ["Bob Matsuoka"]

[workspace.dependencies]
# Internal crates
trusty-mpm-core = { path = "crates/trusty-mpm-core", version = "0.2.9" }
trusty-mpm-mcp = { path = "crates/trusty-mpm-mcp", version = "0.2.9" }
trusty-mpm-client = { path = "crates/trusty-mpm-client", version = "0.2.9" }

# trusty-common shared crates (path reference to sibling checkout).
# trusty-mcp-core gives us JSON-RPC 2.0 / MCP envelopes + the stdio loop;
# trusty-common provides shared utilities. Path deps keep trusty-mpm building
# against local trusty-common changes without a publish cycle.
trusty-common = { path = "../trusty-common/crates/trusty-common", version = "0.3" }
trusty-mcp-core = { path = "../trusty-common/crates/trusty-mcp-core", version = "0.1" }

# Async runtime / HTTP
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Telegram
teloxide = { version = "0.13", features = ["macros"] }

# Utilities
libc = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
parking_lot = "0.12"
dirs = "5"
walkdir = "2"
regex = "1"
gray_matter = "0.2"
notify = "6"
sha2 = "0.10"

# OpenAPI / Swagger.
# utoipa 5 + utoipa-swagger-ui 9 are the versions compatible with axum 0.8
# (the 4.x/7.x line targets axum 0.7 and its `SwaggerUi: Into<Router>` bound
# does not satisfy axum 0.8's stateful `Router<S>`).
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Testing
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
