[package]
name = "trusty-mpm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI client for the trusty-mpm daemon"

[[bin]]
name = "trusty-mpm"
path = "src/main.rs"

[[bin]]
name = "tm"
path = "src/main.rs"

[dependencies]
# Internal crates — the unified binary embeds every mode (daemon, TUI, Telegram).
trusty-mpm-core.workspace = true
trusty-mpm-client.workspace = true
trusty-mpm-daemon = { path = "../trusty-mpm-daemon" }
trusty-mpm-tui = { path = "../trusty-mpm-tui" }
trusty-mpm-telegram = { path = "../trusty-mpm-telegram" }
trusty-mpm-gui = { path = "../trusty-mpm-gui" }

tokio.workspace = true
# Async (not blocking) reqwest: `#[tokio::main]` covers every subcommand, so the
# blocking client is no longer needed.
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
