[package]
name = "trusty-mpm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, artifact model, and IPC protocol for trusty-mpm"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
gray_matter.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
