[package]
name = "trusty-mpm-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Long-running trusty-mpm daemon: session control, hook interception, artifact serving"

[lib]
name = "trusty_mpm_daemon"
path = "src/lib.rs"

[[bin]]
name = "trusty-mpmd"
path = "src/main.rs"

[dependencies]
trusty-mpm-core.workspace = true
trusty-mpm-mcp.workspace = true
trusty-mcp-core.workspace = true
trusty-common.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
dirs.workspace = true
notify.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
