[package]
name = "trusty-mpm-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Telegram bot for remote management of the trusty-mpm daemon"

[[bin]]
name = "trusty-mpm-telegram"
path = "src/main.rs"

[dependencies]
trusty-mpm-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
teloxide.workspace = true
clap.workspace = true
