[package]
name = "trusty-mpm-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ratatui dashboard for monitoring trusty-mpm sessions and agents"

[[bin]]
name = "trusty-mpm-tui"
path = "src/main.rs"

[dependencies]
trusty-mpm-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
